samples/_failures_safe/1761077564_36306f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_89e190f7.c: In function ‘read_input_data’:
./samples/SAFE/__tmp_89e190f7.c:162:5: error: expected expression at end of input
  162 |     return append_to_compression_block(&ctx->input,
      |     ^~~~~~
./samples/SAFE/__tmp_89e190f7.c:162:12: error: too few arguments to function ‘append_to_compression_block’
  162 |     return append_to_compression_block(&ctx->input,
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_89e190f7.c:72:5: note: declared here
   72 | int append_to_compression_block(struct CompressionBlock *block, const uint8_t *data, size_t data_size) {
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_89e190f7.c:162:5: error: expected declaration or statement at end of input
  162 |     return append_to_compression_block(&ctx->input,
      |     ^~~~~~
